@@ -355,5 +355,40 @@ add_salted_str(fko_ctx_t ctx)
     return(FKO_SUCCESS);
 }
 
+/* See if we need to add the "hQ" string to the front of the
+ * encrypted data.
+*/
+int
+add_gpg_prefix(fko_ctx_t ctx)
+{
+    char           *tbuf;
+
+    if(strncmp(ctx->encrypted_msg,
+            B64_GPG_PREFIX, B64_GPG_PREFIX_STR_LEN))
+    {
+        /* We need to realloc space for the prefix.
+        */
+        tbuf = realloc(ctx->encrypted_msg, ctx->encrypted_msg_len
+                    + B64_GPG_PREFIX_STR_LEN+1);
+        if(tbuf == NULL)
+            return(FKO_ERROR_MEMORY_ALLOCATION);
+
+        memmove(tbuf+B64_GPG_PREFIX_STR_LEN, tbuf, ctx->encrypted_msg_len);
+
+        ctx->encrypted_msg = memcpy(tbuf,
+                B64_GPG_PREFIX, B64_GPG_PREFIX_STR_LEN);
+
+        /* Adjust the encoded msg len for added SALT value and Make sure we
+         * are still a properly NULL-terminated string (Ubuntu was one system
+         * for which this was an issue).
+        */
+        ctx->encrypted_msg_len += B64_GPG_PREFIX_STR_LEN;
+        tbuf[ctx->encrypted_msg_len] = '\0';
+
+        ctx->added_gpg_prefix = 1;
+    }
+
+    return(FKO_SUCCESS);
+}
 
 /***EOF***/
